<resources>
    <string name="app_name">收藏助手</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_input_username_hint">请输入用户名</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_hold_hint">自动登录</string>
    <string name="login_forget_hint">忘记密码</string>
    <string name="my_book_mark">我的书签</string>
    <string name="sep">/</string>
    <string name="count">0</string>

    <!-- 七牛云配置 -->
    <string name="bucket">Bucket</string>
    <string name="access_key">AccessKey</string>
    <string name="secret_key">SecretKey</string>\
    <string name="image_bucket">图片 Bucket</string>
    <string name="doc_bucket">文档 Bucket</string>
    <string name="music_bucket">音乐 Bucket</string>
    <string name="video_bucket">视频 Bucket</string>
    <string name="doc_path">文档路径</string>
    <string name="music_path">音乐路径</string>
    <string name="image_path">图片路径</string>
    <string name="video_path">视频路径</string>
    <string name="store_region">存储区域</string>
    <string name="commit">提交</string>

    <string name="qiniu_ak_hint">请输入七牛云 AccessKey</string>
    <string name="qiniu_sk_hint">请输入七牛云 SecretKey</string>
    <string name="bucket_hint">请输入 bucket</string>
    <string name="other_bucket_hint">默认使用 bucket </string>
    <string name="bucket_path_hint">默认 /</string>
    <string name="document_path_hint">默认 document/</string>
    <string name="image_path_hint">默认 image/</string>
    <string name="music_path_hint">默认 music/</string>
    <string name="video_path_hint">默认 video/</string>
    <string name="store_region_hint">请输入存储区域</string>
    <string name="domain">域名</string>
    <string name="domain_hint">请输入域名</string>

    <!--    <string name="access_key_is_not_empty"></string>-->
    <string name="secret_key_is_not_empty">Secret key 不能为空</string>
    <string name="domain_is_not_empty">域名不能为空</string>
    <!-- 七牛云配置 -->

    <!-- 阿里云配置 -->
    <string name="ak">AccessKey</string>
    <string name="ak_hint">请输入 AccessKey</string>
    <string name="ak_secret">AKSecret</string>
    <string name="ak_secret_hint">请输入 AccessKeySecret</string>
    <!-- 阿里云配置 -->

    <string name="save_collect_helper">保存到收藏助手</string>
    <string name="please_choose_category">请选择</string>
    <string name="create_new_category">+创建</string>
    <string name="commit_add_book_mark">OK</string>

    <string name="cancel">取消</string>
    <string name="completed">完成</string>
    <string name="create_book_mark_category_hint">请输入分类名称</string>
    <string name="new_category_empty">分类名称不能为空</string>

    <string name="internal_error">内部出错</string>
    <string name="file_upload_fail">文件上传失败</string>
    <string name="file_upload_success">文件上传成功</string>

    <string name="category_text">分类</string>
    <string name="category_is_not_empty">没有选择分类</string>

    <string name="share_content_empty">没有获取到分享的内容</string>
    <string name="get_file_path_error">获取文件路径出错</string>
    <string name="get_file_content_error">获取文件内容出错</string>

    <string name="user_register">用户注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>

    <string name="username_is_not_empty">用户名不能为空</string>
    <string name="password_is_not_empty">密码不能为空</string>
    <string name="password_is_inconsistent">密码不一致</string>
    <string name="confirm_password_is_not_empty">请输入确认密码</string>
    <string name="password_must_big_six">请输入至少六位密码</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>

    <string name="access_key_is_not_empty">access key 不能为空</string>
    <string name="access_key_secret_is_not_empty">access key secret 不能为空</string>
    <string name="bucket_name_is_not_empty">bucket 不能为空</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>

    <string name="cloud_store_config_get_error">没有获取到云储存配置，请检查配置</string>
    <string name="cloud_store_init_error">云存储初始化失败</string>
    <string name="music_play_error">播放出错</string>

    <string name="file_download_error">文件下载失败</string>

    <string name="cloud_store_config">云存储配置</string>

    <string name="secret_id">SecretId</string>
    <string name="region">Region</string>
    <string name="secret_id_hint">请输入 secret id</string>
    <string name="secret_key_hint">请输入 secret key</string>
    <string name="region_hint">请输入 region</string>

    <string name="secret_id_is_not_empty">SecretId 不能为空</string>
    <string name="region_is_not_empty">Region 不能为空</string>

</resources>
