<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="loginModel"
            type="online.mengchen.collectionhelper.user.LoginViewModel" />

    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                android:src="@mipmap/user" />

            <View
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:background="@color/account_input_bg_color" />


            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@={loginModel.username}"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_login_username_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_clear"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_login_input_ok"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                android:src="@mipmap/password" />

            <View
                android:layout_width="1dp"
                android:layout_height="22dp"
                android:background="@color/account_input_bg_color" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:text="@={loginModel.password}"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_login_pwd_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_clear"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_login_submit"
            android:elevation="0dp"
            android:onClick="@{() -> loginModel.login()}"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_register"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_remember_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_selector_checkbox"
                android:checked="@={loginModel.rememberLogin}"
                android:contentDescription="@null"
                android:textColor="@color/text_secondary_color"
                android:textSize="@dimen/font_12"
                tools:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hold_hint"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />

    </LinearLayout>

</layout>

